[package]
name = "qfe"
version = "0.3.0"
edition = "2024"
authors = ["n12n <nigel.christian@hiahatf.org>", "Gemini"]
documentation = "https://docs.rs/qfe"
description = "Experimental protocol for quantum-secure communications"
repository = "https://github.com/kn0sys/qfe"
license = "MIT"
readme = "README.md"
keywords = [
    "ai",
    "pqs",
    "quantum-proof",
    "quantum",
    "security"
]
categories = ["cryptography"]

[lib]
name = "qfe"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
aead = "0.5.2"
chacha20poly1305 = "0.10.1"
curve25519-dalek = { version = "4", features = ["rand_core", "serde"] }
rand = "0.9.0"
sha2 = "0.10.8"
